fix: vertical scrolling of registration and login forms on small screens

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,9 +1,13 @@
 .form {
     max-width: 396px;
+    height: 100vh;
     margin: 0 auto;
     padding: 70px 0;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-style: normal;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
 }
 
 .form__logo {
@@ -25,12 +29,18 @@
     padding: 0;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-style: normal;
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form__sections {
+    width: 100%;
     list-style: none;
     margin: 0;
     padding: 0;
+    flex: 1 1 auto;
 }
 
 .form__section {
@@ -155,13 +165,9 @@
     margin-left: 6px;
 }
 
-.login__enter {
-    margin-top: 169px;
-}
-
 @media screen and (max-width: 768px) {
     .form {
-        padding: 232px 0;
+        padding-top: 23vh;
     }
 }
 
@@ -170,8 +176,6 @@
         box-sizing: border-box;
         width: 100%;
         padding: 56px 30px 30px;
-        display: flex;
-        flex-direction: column;
         align-items: center;
     }
 
@@ -190,11 +194,8 @@
     }
 
     .form__enter {
-        width: 100%;
         font-size: 12px;
         line-height: 15px;
-        margin-bottom: 14px;
-        margin-top: 169px;
     }
 
     .form__footnote {
@@ -206,9 +207,5 @@
         font-size: 12px;
         line-height: 15px;
         margin-left: 7px;
-    }
-
-    .login__enter {
-        margin-top: 257px;
     }
 }
